tenants/payments/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: payments
  labels:
    tenant: payments
    policy.sigstore.dev/include: "true"
  annotations:
    argocd.argoproj.io/sync-wave: "-1"
